# ComfyUI-QING

./: .gitignore  LICENSE  README.md  __init__.py  install_dependencies.py  pyproject.toml  requirements.txt
example_workflows/: API模型的使用方式.json  DeepSeek模型的API使用.json  GLM模型的API使用.json  SVG到图像与遮罩拆分缩放.json  上传图像转SVG.json  关于配置文件的导入及导出.json  图像旋转.json  视频的合成及自定义保存.json  遮罩的混合、扩张、判断、拆分和缩放.json
js/: README.md  align_nodes.js  context_menu.js  dynamic_adjustment.js  example_node_registration.js  let_me_see.js  qing_colors.js  settings_sync.js
js/config/: settings.js
js/core/: AlignmentEngine.js  EventManager.js  HistoryManager.js  RadialMenuUI.js
js/dynamic_adjustment/: index.js
js/dynamic_adjustment/config/: deepseek.js  doubao.js  gemini.js  glm.js  kimi.js  qwen.js
js/dynamic_adjustment/core/: DynamicModelManager.js
js/dynamic_adjustment/utils/: registry.js
js/icons/: alignment.js
js/settings_sync/: index.js
js/settings_sync/config/: api_keys.js
js/settings_sync/core/: ChangeDetector.js  ConfigStore.js  SyncManager.js
js/settings_sync/services/: ApiClient.js  TimerService.js
js/utils/: geometry.js  hotkey_input.js  validators.js
locales/: README.md
locales/en/: main.json  nodeDefs.json  settings.json
locales/zh/: main.json  nodeDefs.json  settings.json
node/: custom_load_image.py  load_svg.py  svg_to_image.py
nodes/: Config_manager.py  Custom_load_image.py  Data_converter.py  Data_preview.py  Data_tools.py  Debug_tools.py  Image_cache.py  Image_flipping.py  Image_mask_converter.py  Image_to_svg.py  Load_svg.py  MaskBlend.py  MaskExpansion.py  Mask_Splitter.py  Mask_blend.py  Mask_expansion.py  Mask_fill.py  Mask_judgment.py  Mask_preview.py  Mask_scale.py  README.md  Size_scaling.py  Split_mask.py  Svg_saver.py  Svg_to_image.py  Text_compare.py  Type_conversion.py  Video_combine.py  custom_load_image.py  image_to_svg.py  load_svg.py  mask_judgment.py  mask_scale.py  split_mask.py  svg_saver.py  svg_to_image.py  text_compare.py  video_combine.py
nodes/api/: API_DeepSeek_Language.py  API_Doubao_Vision.py  API_GLM_Language.py  API_GLM_Vision.py  API_Gemini_Edit.py  API_Gemini_Vision.py  API_Kimi_Language.py  API_Kimi_Vision.py  API_Qwen_Language.py  API_Qwen_Vision.py  DeepSeek_Language_API.py  Doubao_Vision_API.py  GLM_Language_API.py  GLM_Vision_API.py  Kimi_Language_API.py  Kimi_Vision_API.py  README.md  __init__.py  api_key_server.py  base_api_framework.py  config_server.py  settings_approach.py
nodes/api/config/: README.md  config.json.example  config_simple.json.example
nodes/api/utils/: __init__.py  config_server.py  settings_approach.py
nodes/data/: __init__.py
nodes/data_types/: Data_preview.py  Text_compare.py  Type_conversion.py
nodes/debug_tools/: LetMeSee.py
nodes/image/: Image_loader.py  Image_transform.py  __init__.py
nodes/image_processing/: Custom_load_image.py  Image_cache.py  Image_flipping.py  Image_mask_converter.py  Size_scaling.py
nodes/io_operations/: Load_svg.py  Svg_saver.py
nodes/mask/: Mask_Splitter.py  __init__.py
nodes/mask_processing/: Mask_Splitter.py  Mask_blend.py  Mask_expansion.py  Mask_judgment.py  Mask_preview.py
nodes/svg/: SVG_io.py  Svg_to_image.py  __init__.py
nodes/utils/: Config_manager.py  Debug_tools.py  __init__.py
nodes/video/: Video_processor.py  __init__.py
nodes/video_processing/: Video_combine.py
