[project]
name = "ComfyUI-QING"
description = "A variety of exquisite nodes provide more efficient assistance for building your workflow."
version = "1.1.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# 核心依赖 (ComfyUI已包含)", "# torch - ComfyUI核心依赖，无需重复安装", "# numpy - ComfyUI核心依赖，无需重复安装", "# 图像处理核心库", "Pillow>=9.0.0", "opencv-python>=4.5.0", "scipy>=1.7.0", "scikit-image>=0.18.0", "# SVG处理专用库", "cairosvg>=2.5.0", "# 可选依赖 (用于SVG处理的备用方案)", "# svglib>=1.4.0  # 取消注释以启用SVG备用转换器", "# reportlab>=3.6.0  # svglib的依赖", "# 视频处理依赖", "# 注意：FFmpeg需要单独安装系统级依赖", "# Windows: 从 https://ffmpeg.org/download.html 下载", "# Linux: sudo apt-get install ffmpeg", "# macOS: brew install ffmpeg", "# AI模型API依赖", "zai-sdk>=0.0.3.3"]

[project.urls]
Repository = "https://github.com/GAO-SHIQING/ComfyUI-QING"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/GAO-SHIQING/ComfyUI-QING/wiki"
"Bug Tracker" = "https://github.com/GAO-SHIQING/ComfyUI-QING/issues"

[tool.comfy]
PublisherId = "shiqing"
DisplayName = "ComfyUI-QING"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

