[tool.black]
line-length = 120
target-version = ['py39']

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["nodes"]

[project]
name = "ComfyUI-QING"
version = "1.2.1"
description = "A powerful all-in-one ComfyUI extension with comprehensive professional nodes for AI models, image/mask/SVG processing, video synthesis, and workflow management. Features modular architecture with node alignment tool and multi-platform API support."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}

authors = [
    {name = "GAO-SHIQING", email = "ab1314625@qq.com"}
]

dependencies = [
    "Pillow>=9.0.0",
    "opencv-python>=4.5.0",
    "scipy>=1.7.0",
    "scikit-image>=0.18.0",
    "cairosvg>=2.5.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
svg = ["svglib>=1.4.0", "reportlab>=3.6.0"]

[project.urls]
Repository = "https://github.com/GAO-SHIQING/ComfyUI-QING"
Documentation = "https://github.com/GAO-SHIQING/ComfyUI-QING/wiki"
"Bug Tracker" = "https://github.com/GAO-SHIQING/ComfyUI-QING/issues"

[tool.comfy]
PublisherId = "shiqing"
DisplayName = "ComfyUI-QING"
Icon = ""

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

